--- a/.yamato/universal-iphone-metal.yml
+++ b/.yamato/universal-iphone-metal.yml
@@ -36,7 +36,7 @@ Build_Universal_iPhone_Metal_Player_il2cpp_apiNet4_Linear_2020.2:
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c iOS   --wait --published-only
       -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output utr
       -  chmod +x ./utr
-      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=Metal" --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --timeout=1800
+      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg=-playergraphicsapi=Metal --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=IL2CPP --extra-editor-arg=-colorspace=Linear --timeout=1800
     artifacts:
         logs:
             paths:
@@ -78,7 +78,7 @@ Build_Universal_iPhone_Metal_Player_mono_apiNet2_Linear_2020.2:
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c iOS   --wait --published-only
       -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output utr
       -  chmod +x ./utr
-      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=Metal" --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --timeout=1800
+      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg=-playergraphicsapi=Metal --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg=-colorspace=Linear --timeout=1800
     artifacts:
         logs:
             paths:
@@ -124,7 +124,7 @@ Build_Universal_iPhone_Metal_Player_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
       -  unity-downloader-cli --source-file unity_revision.txt -c editor -c iOS   --wait --published-only
       -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output utr
       -  chmod +x ./utr
-      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=Metal" --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=IL2CPP --extra-editor-arg="-colorspace=Linear" --timeout=1800
+      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg=-playergraphicsapi=Metal --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=IL2CPP --extra-editor-arg=-colorspace=Linear --timeout=1800
     artifacts:
         logs:
             paths:
@@ -173,7 +173,7 @@ Build_Universal_iPhone_Metal_Player_mono_apiNet2_Linear_CUSTOM-REVISION:
       -  unity-downloader-cli --source-file unity_revision.txt -c editor -c iOS   --wait --published-only
       -  curl -s https://artifactory.internal.unity3d.com/core-automation/tools/utr-standalone/utr --output utr
       -  chmod +x ./utr
-      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg="-playergraphicsapi=Metal" --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --timeout=1800
+      -  ./utr --suite=playmode --platform=iOS --testproject=TestProjects/UniversalGraphicsTest --extra-editor-arg=-playergraphicsapi=Metal --editor-location=.Editor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg=-colorspace=Linear --timeout=1800
     artifacts:
         logs:
             paths:
