--- a/.yamato/universal_hybrid-android-opengles3.yml
+++ b/.yamato/universal_hybrid-android-opengles3.yml
@@ -48,7 +48,7 @@ Build_Universal_Hybrid_Android_OpenGLES3_Player_mono_apiNet2_Linear_2020.2:
                   set /p GIT_REVISIONDATE=<revdate.tmp
                   echo %GIT_REVISIONDATE%
                   del revdate.tmp
-                  utr --suite=playmode --platform=Android --testproject=./TestProjects/UniversalHybridTest --extra-editor-arg="-playergraphicsapi=OpenGLES3" --editor-location=./WindowsEditor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --architecture=ARM64 --compilation-errors-as-warnings --timeout=1800
+                  utr --suite=playmode --platform=Android --testproject=./TestProjects/UniversalHybridTest --extra-editor-arg=-playergraphicsapi=OpenGLES3 --editor-location=./WindowsEditor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg=-colorspace=Linear --architecture=ARM64 --compilation-errors-as-warnings --timeout=1800
     artifacts:
         logs:
             paths:
@@ -106,7 +106,7 @@ Build_Universal_Hybrid_Android_OpenGLES3_Player_mono_apiNet2_Linear_CUSTOM-REVIS
                   set /p GIT_REVISIONDATE=<revdate.tmp
                   echo %GIT_REVISIONDATE%
                   del revdate.tmp
-                  utr --suite=playmode --platform=Android --testproject=./TestProjects/UniversalHybridTest --extra-editor-arg="-playergraphicsapi=OpenGLES3" --editor-location=./WindowsEditor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg="-colorspace=Linear" --architecture=ARM64 --compilation-errors-as-warnings --timeout=1800
+                  utr --suite=playmode --platform=Android --testproject=./TestProjects/UniversalHybridTest --extra-editor-arg=-playergraphicsapi=OpenGLES3 --editor-location=./WindowsEditor --artifacts_path=test-results --player-save-path=players --build-only --scripting-backend=Mono2x --extra-editor-arg=-colorspace=Linear --architecture=ARM64 --compilation-errors-as-warnings --timeout=1800
     artifacts:
         logs:
             paths:
