--- a/.yamato/shadergraph-win-vulkan.yml
+++ b/.yamato/shadergraph-win-vulkan.yml
@@ -32,6 +32,7 @@ Build_ShaderGraph_Win_Vulkan_Player_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/ShaderGraph/utr_pinning
+      -  pip install pipenv
       -  python -m pipenv install --dev --three
       -  pipenv run python -m download_utr -v 3481321
       -  cd ../
@@ -63,6 +64,7 @@ ShaderGraph_Win_Vulkan_playmode_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/ShaderGraph/utr_pinning
+      -  pip install pipenv
       -  python -m pipenv install --dev --three
       -  pipenv run python -m download_utr -v 3481321
       -  cd ../
@@ -91,6 +93,7 @@ ShaderGraph_Win_Vulkan_editmode_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/ShaderGraph/utr_pinning
+      -  pip install pipenv
       -  python -m pipenv install --dev --three
       -  pipenv run python -m download_utr -v 3481321
       -  cd ../
@@ -142,6 +145,7 @@ Build_ShaderGraph_Win_Vulkan_Player_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/ShaderGraph/utr_pinning
+      -  pip install pipenv
       -  python -m pipenv install --dev --three
       -  pipenv run python -m download_utr -v 3481321
       -  cd ../
@@ -177,6 +181,7 @@ ShaderGraph_Win_Vulkan_playmode_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/ShaderGraph/utr_pinning
+      -  pip install pipenv
       -  python -m pipenv install --dev --three
       -  pipenv run python -m download_utr -v 3481321
       -  cd ../
@@ -209,6 +214,7 @@ ShaderGraph_Win_Vulkan_editmode_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/ShaderGraph/utr_pinning
+      -  pip install pipenv
       -  python -m pipenv install --dev --three
       -  pipenv run python -m download_utr -v 3481321
       -  cd ../
