--- a/.yamato/vfx_urp-win-dx11.yml
+++ b/.yamato/vfx_urp-win-dx11.yml
@@ -32,6 +32,7 @@ Build_VFX_URP_Win_DX11_Player_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/VisualEffectGraph_URP/utr_pinning
+      -  pip install pipenv
       -  python -m pipenv install --dev --three
       -  pipenv run python -m download_utr -v 3481321
       -  cd ../
@@ -63,6 +64,7 @@ VFX_URP_Win_DX11_playmode_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/VisualEffectGraph_URP/utr_pinning
+      -  pip install pipenv
       -  python -m pipenv install --dev --three
       -  pipenv run python -m download_utr -v 3481321
       -  cd ../
@@ -114,6 +116,7 @@ Build_VFX_URP_Win_DX11_Player_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/VisualEffectGraph_URP/utr_pinning
+      -  pip install pipenv
       -  python -m pipenv install --dev --three
       -  pipenv run python -m download_utr -v 3481321
       -  cd ../
@@ -149,6 +152,7 @@ VFX_URP_Win_DX11_playmode_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/VisualEffectGraph_URP/utr_pinning
+      -  pip install pipenv
       -  python -m pipenv install --dev --three
       -  pipenv run python -m download_utr -v 3481321
       -  cd ../
