--- a/.yamato/hdrp-win-dx12.yml
+++ b/.yamato/hdrp-win-dx12.yml
@@ -14,9 +14,9 @@ HDRP_Win_DX12_playmode_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/HDRP_Tests/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -44,9 +44,9 @@ HDRP_Win_DX12_playmode_XR_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/HDRP_Tests/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -74,9 +74,9 @@ HDRP_Win_DX12_playmode_NonRenderGraph_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/HDRP_Tests/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -103,9 +103,9 @@ HDRP_Win_DX12_editmode_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/HDRP_Tests/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -152,9 +152,9 @@ Build_HDRP_Win_DX12_Player_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/HDRP_RuntimeTests/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -186,9 +186,9 @@ HDRP_Win_DX12_playmode_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/HDRP_Tests/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
@@ -220,9 +220,9 @@ HDRP_Win_DX12_playmode_XR_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/HDRP_Tests/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
@@ -254,9 +254,9 @@ HDRP_Win_DX12_playmode_NonRenderGraph_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/HDRP_Tests/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
@@ -287,9 +287,9 @@ HDRP_Win_DX12_editmode_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/HDRP_Tests/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
@@ -343,9 +343,9 @@ Build_HDRP_Win_DX12_Player_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/HDRP_RuntimeTests/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
