--- a/.yamato/universal-win-dx12.yml
+++ b/.yamato/universal-win-dx12.yml
@@ -33,9 +33,9 @@ Build_Universal_Win_DX12_Player_il2cpp_apiNet4_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -65,9 +65,9 @@ Universal_Win_DX12_playmode_il2cpp_apiNet4_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -94,9 +94,9 @@ Universal_Win_DX12_editmode_il2cpp_apiNet4_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -123,9 +123,9 @@ Universal_Win_DX12_playmode_XR_il2cpp_apiNet4_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -172,9 +172,9 @@ Build_Universal_Win_DX12_Player_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -204,9 +204,9 @@ Universal_Win_DX12_playmode_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -233,9 +233,9 @@ Universal_Win_DX12_editmode_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -262,9 +262,9 @@ Universal_Win_DX12_playmode_XR_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -315,9 +315,9 @@ Build_Universal_Win_DX12_Player_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
@@ -351,9 +351,9 @@ Universal_Win_DX12_playmode_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
@@ -384,9 +384,9 @@ Universal_Win_DX12_editmode_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
@@ -417,9 +417,9 @@ Universal_Win_DX12_playmode_XR_il2cpp_apiNet4_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
@@ -473,9 +473,9 @@ Build_Universal_Win_DX12_Player_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
@@ -509,9 +509,9 @@ Universal_Win_DX12_playmode_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
@@ -542,9 +542,9 @@ Universal_Win_DX12_editmode_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
@@ -575,9 +575,9 @@ Universal_Win_DX12_playmode_XR_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/UniversalGraphicsTest/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
