--- a/.yamato/vfx_urp-win-dx11.yml
+++ b/.yamato/vfx_urp-win-dx11.yml
@@ -32,9 +32,9 @@ Build_VFX_URP_Win_DX11_Player_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/VisualEffectGraph_URP/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -64,9 +64,9 @@ VFX_URP_Win_DX11_playmode_mono_apiNet2_Linear_2020.2:
         UPM_REGISTRY: https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates
     commands:
       -  cd TestProjects/VisualEffectGraph_URP/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli -u dff91d65251a9ab8c12af258ce88fee061d85a7d -c editor -c il2cpp  --wait --published-only
@@ -116,9 +116,9 @@ Build_VFX_URP_Win_DX11_Player_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/VisualEffectGraph_URP/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
@@ -152,9 +152,9 @@ VFX_URP_Win_DX11_playmode_mono_apiNet2_Linear_CUSTOM-REVISION:
         CUSTOM_REVISION: custom_revision_not_set
     commands:
       -  cd TestProjects/VisualEffectGraph_URP/utr_pinning
-      -  pip install pipenv
-      -  python -m pipenv install --dev --three
-      -  pipenv run python -m download_utr -v 3481321
+      -  pip3 install pipenv
+      -  python3 -m pipenv install --dev --three
+      -  pipenv run python3 -m download_utr -v 3481321
       -  cd ../
       -  pip install unity-downloader-cli --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade
       -  unity-downloader-cli --source-file ../../unity_revision.txt -c editor -c il2cpp  --wait --published-only
